loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:5: error: '(' expected but identifier found.
    if estSurBiscuit()==true {
       ^Poucet2:8: error: illegal start of simple expression
  } while (crossing==false)
  ^Poucet2:9: error: '(' expected but identifier found.
  if n>=3 {
     ^Poucet2:14: error: illegal start of simple expression
}
^